--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -3,16 +3,16 @@
     <h1 class="page-header">TodoList</h1>
 
     <% if notice.present? %>
-        <div class="alert alert-info" role="alert">
-          <%= notice %>
-        </div>
+      <div class="alert alert-info" role="alert">
+        <%= notice %>
+      </div>
     <% end %>
 
     <%= render "form", todo: @todo %>
 
     <hr />
 
-    <table class="table table-striped">
+    <table class="table table-striped" id="todoList">
       <%= render @todos %>
     </table>
 
